Lot of small refactoring